cabal-version:      3.4
name:               reproducer
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             max-patternman
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
    exposed-modules:  MyLib
    ghc-options: -Wall -fplugin=Polysemy.Plugin
    build-depends:    base, polysemy-plugin, polysemy
    hs-source-dirs:   src
    default-language: Haskell2010
